# esp_lcd_st75256

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/MYUI/: CMakeLists.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
components/MYUI/components/: ui_comp_hook.c
components/MYUI/screens/: ui_Screen1.c  ui_Screen1.h
components/ST75256/: CMakeLists.txt  esp_lcd_st75256.c  esp_lcd_st75256.h
main/: CMakeLists.txt  i2c_st75256.c  idf_component.yml  lvgl_demo_ui.c
